# openTrade

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  env.example  gen_dashboard_fixture.py  installation guide.md  mypy.ini  package-lock.json  run.sh  run_backend.py
.github/workflows/: backend.yml  docker.yml  frontend.yml  main.yml  security.yml
backend/: __init__.py  api_key_models.py  api_key_routes.py  app.py  auth_deps.py  auth_models.py  auth_routes.py  cache.py  database.py  db_models.py  encryption.py  generate_models.py  indicators.py  models.py  normalizer.py  requirements-dev.txt  requirements.txt  supabase_client.py  user_routes.py  websocket.py
backend/backtesting/: __init__.py  context.py  costs.py  engine.py  errors.py  loop.py  metrics.py  orders.py  portfolio.py  run_config.py  run_diff.py  run_id.py  run_rerun.py  run_snapshot.py  run_store.py  sandbox.py  serialize.py  strategy.py  trades.py  types.py  version.py
backend/core/: api_key_store.py  auth_deps.py  db_error_handler.py  rate_limit.py
backend/data_sources/: __init__.py  csv_loader.py  yfinance_loader.py
backend/datastore/: __init__.py  __main__.py  actions.py  adjust.py  errors.py  ingest.py  layout.py  manifest.py  membership.py  (+3 more)
frontend/: components.json  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.electron.json  tsconfig.json  vite.config.ts
shared/: README.md  market_intervals.json  market_periods.json
supabase/: config.toml  seed.sql
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: lib.rs  main.rs
(+504 files in other folders)
