[package]
name = "opentrade"
version = "1.0.0"
description = "OpenTrade desktop - Tauri wrapper"
authors = ["OpenTrade"]
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "opentrade"
path = "src/main.rs"

[lib]
name = "opentrade"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
